Fix -Wformat= warnings when passing enum to integer specifiers https://bugs.webkit.org/show_bug.cgi?id=214441

Reviewed by Darin Adler.

Covered by existing tests.

* platform/mediastream/MediaConstraints.cpp:
(WebCore::MediaConstraint::log const):
(WebCore::BooleanConstraint::logAsBoolean const):
(WebCore::DoubleConstraint::logAsDouble const):
(WebCore::IntConstraint::logAsInt const):
* platform/mediastream/MediaConstraints.h: Made uint8_t the underlying
type for MediaConstraints::DataType.
* platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::selectSettings):
* platform/mediastream/RealtimeMediaSourceSupportedConstraints.h: Made
uint8_t the underlying type for MediaConstraintType.


Canonical link: https://commits.webkit.org/227282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264534 268f45cc-cd09-0410-ab3c-d52691b4dbfc